static/docs/1.2.0/api/python/_sources/generated/gravitino.client.base_schema_catalog.BaseSchemaCatalog.rst.txt
.. Licensed to the Apache Software Foundation (ASF) under one
   or more contributor license agreements.  See the NOTICE file
   distributed with this work for additional information
   regarding copyright ownership.  The ASF licenses this file
   to you under the Apache License, Version 2.0 (the
   "License"); you may not use this file except in compliance
   with the License.  You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing,
   software distributed under the License is distributed on an
   "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
   KIND, either express or implied.  See the License for the
   specific language governing permissions and limitations
   under the License.

gravitino.client.base\_schema\_catalog.BaseSchemaCatalog
========================================================

.. currentmodule:: gravitino.client.base_schema_catalog

.. autoclass:: BaseSchemaCatalog
   :members:                                    
   :show-inheritance:                           
   :inherited-members:                          

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~BaseSchemaCatalog.__init__
      ~BaseSchemaCatalog.alter_function
      ~BaseSchemaCatalog.alter_schema
      ~BaseSchemaCatalog.as_fileset_catalog
      ~BaseSchemaCatalog.as_function_catalog
      ~BaseSchemaCatalog.as_model_catalog
      ~BaseSchemaCatalog.as_schemas
      ~BaseSchemaCatalog.as_table_catalog
      ~BaseSchemaCatalog.as_topic_catalog
      ~BaseSchemaCatalog.audit_info
      ~BaseSchemaCatalog.builder
      ~BaseSchemaCatalog.comment
      ~BaseSchemaCatalog.create_schema
      ~BaseSchemaCatalog.drop_function
      ~BaseSchemaCatalog.drop_schema
      ~BaseSchemaCatalog.format_schema_request_path
      ~BaseSchemaCatalog.function_exists
      ~BaseSchemaCatalog.get_function
      ~BaseSchemaCatalog.list_function_infos
      ~BaseSchemaCatalog.list_functions
      ~BaseSchemaCatalog.list_schemas
      ~BaseSchemaCatalog.load_schema
      ~BaseSchemaCatalog.name
      ~BaseSchemaCatalog.properties
      ~BaseSchemaCatalog.provider
      ~BaseSchemaCatalog.register_function
      ~BaseSchemaCatalog.schema_exists
      ~BaseSchemaCatalog.to_schema_update_request
      ~BaseSchemaCatalog.type
      ~BaseSchemaCatalog.validate
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~BaseSchemaCatalog.PROPERTY_PACKAGE
      ~BaseSchemaCatalog.rest_client
   
   